--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -16,7 +16,7 @@ html
         .column.column-50
           h2 Calder Code
           form(method='POST' action='/render')
-            textarea#code // Your CalderGL code...
+            textarea#code(name='code') // Your CalderGL code...
             input(type='submit' name='Run')
 
         .column.column-50
