--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -16,16 +16,16 @@ html
         .column.column-50
           h2 Calder Code
           form(method='POST' action='/')
-            textarea#code(name='code')= code || '// Your CalderGL code...'
+            textarea#source(name='source')= source
             input(type='submit' name='Run')
 
         .column.column-50
           h2 Compiled WebGL
-          canvas#webgl
+          div#webgl
 
       .row
         pre
           code#log
 
-    script#source(type='x-source')!= source
+    script#code(type='x-code')!= code
     script(src='js/client.js')
