--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -1,5 +1,6 @@
+doctype html
 html
-  head
+  html(lang='en')
     title Calder Playground
 
     link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic')
@@ -16,7 +17,8 @@ html
         .column.column-50
           h2 Calder Code
           form(method='POST' action='/')
-            textarea#source(name='source')= source
+            #source
+            textarea(name='source')= source
             input(type='submit' name='Run')
 
         .column.column-50
@@ -27,5 +29,16 @@ html
         pre
           code#log
 
+    script(src='https://code.jquery.com/jquery-2.2.4.min.js', integrity='sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=', crossorigin='anonymous')
     script#code(type='x-code')!= code
     script(src='js/client.js')
+    script(src='js/ace.js', type='text/javascript', charset='utf-8')
+    script.
+      var editor = ace.edit("source");
+      var textarea = $('textarea[name="source"]').hide();
+      editor.getSession().setValue(textarea.val());
+      editor.getSession().on('change', function(){
+        textarea.val(editor.getSession().getValue());
+      });
+
+      editor.session.setMode("ace/mode/javascript");
