--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -16,15 +16,8 @@ html
       .row
         .column
           h2 Calder Code
-          form#state(method='POST' action='/')
-            #source
-            textarea(name='source')= source
-            input#seed0(type='hidden' name='seed0' value=seeds[0])
-            input#seed1(type='hidden' name='seed1' value=seeds[1])
-            input#seed2(type='hidden' name='seed2' value=seeds[2])
-            input#seed3(type='hidden' name='seed3' value=seeds[3])
-            input#focused(type='hidden' name='focused' value=focused)
-            input(type='submit' name='Run')
+          #source
+          button#run Run (Ctrl-R)
 
         .column.fixed
           h2 Compiled WebGL
@@ -36,16 +29,5 @@ html
         pre
           code#log
 
-    script(src='https://code.jquery.com/jquery-2.2.4.min.js', integrity='sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=', crossorigin='anonymous')
-    script#code(type='x-code')!= code
+    script#code(type='x-code')!= source
     script(src='js/client.js')
-    script(src='js/ace.js', type='text/javascript', charset='utf-8')
-    script.
-      var editor = ace.edit("source");
-      var textarea = $('textarea[name="source"]').hide();
-      editor.getSession().setValue(textarea.val());
-      editor.getSession().on('change', function(){
-        textarea.val(editor.getSession().getValue());
-      });
-
-      editor.session.setMode("ace/mode/javascript");
