--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -32,14 +32,28 @@ html
               label Distance multiplier
               div.group
                 input#distance1(type=number, disabled)
+                span +
                 input#distance2(type=number, disabled)
+                span <i>x</i> +
                 input#distance3(type=number, disabled)
+                span <i>x</i><sup>2</sup>
             div.input
               label Alignment multiplier
               input#alignmentMultiplier(type=number, disabled)
             div.input
               label Alignment offset
-              input#alignmentOffset(type=number, disabled)
+              div.group
+                div.endpoint
+                  div.num
+                    span -1
+                    span.description (lenient)
+                  span &le;
+                input#alignmentOffset(type=number, disabled)
+                div.endpoint
+                  span &le;
+                  div.num
+                    span 1
+                    span.description (strict)
 
     script#code(type='x-code')!= source
     script(src='js/client.js')
