--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -4,8 +4,8 @@ html
     title Calder Playground
 
     link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic')
-    link(rel='stylesheet', href='//cdn.rawgit.com/necolas/normalize.css/master/normalize.css')
-    link(rel='stylesheet', href='//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css')
     link(rel='stylesheet', href='styles/main.css')
 
   body
@@ -54,6 +54,8 @@ html
                   div.num
                     span 1
                     span.description (strict)
+            div.input
+              button#delete(disabled) Delete this guide
 
     script#code(type='x-code')!= source
     script(src='js/client.js')
