--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -31,6 +31,9 @@ html
             div.input
               label(for=bones) Show bones
               input#bones(type='checkbox')
+            div.input
+              label Maximum depth
+              input#maxDepth(type='number', value='100', step='1')
 
           pre
             code#log
