--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -41,6 +41,15 @@ html
         .column.fixed
           div#webgl
 
+          div#camera.controls
+            span Snap to side:
+            button#x_plus x+
+            button#x_minus x-
+            button#y_plus y+
+            button#y_minus y-
+            button#z_plus z+
+            button#z_minus z-
+
           div#cost.disabled.controls
             div.input
               label Distance multiplier
