Allow no guiding curves

--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -27,7 +27,7 @@ html
           div#rendererControls.controls
             div.input
               label(for=vectorField) Show vector field
-              input#vectorField(type='checkbox', checked)
+              input#vectorField(type='checkbox')
             div.input
               label(for=bones) Show bones
               input#bones(type='checkbox')
